# dify-plugin-tokenizer

./: PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
provider/: dify-plugin-pdm-template.py  dify-plugin-pdm-template.yaml  tokenizer.py  tokenizer.yaml
src/: tokenizer.py
tools/: dify-plugin-pdm-template.py  dify-plugin-pdm-template.yaml  tokenize.py  tokenize.yaml
